--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,11 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  .container
+    h1= title
+    p Welcome to #{title}
+    p This is an app designed to make and remember calculations of buffer solutions for biologists and biochemists.
+    a(href="#").btn.btn-success Click here to make an account.
+    br
+    br
+    a(href="#").btn.btn-warning Click here to make a buffer without an account.
