--- a/views/index.jade
+++ b/views/index.jade
@@ -5,7 +5,12 @@ block content
     h1= title
     p Welcome to #{title}
     p This is an app designed to make and remember calculations of buffer solutions for biologists and biochemists.
-    a(href="#").btn.btn-success Click here to make an account.
+    a(href="users/add").btn.btn-success Click here to make an account.
     br
     br
     a(href="#").btn.btn-warning Click here to make a buffer without an account.
+    br
+    h3 Here are the buffers that have already been made:
+    ul
+      each buffer in buffers
+        li= buffer.nameify
