--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,8 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/bootstrap/dist/css/bootstrap.min.css')
+    //- link(rel='stylesheet', href='/bootstrap/dist/css/bootstrap-theme.min.css')
     link(rel='stylesheet', href='/flat-ui/dist/css/flat-ui.min.css')
   body
     block content
+    //- script(src='/javascripts/index.js')
