--- a/views/bufferPage.jade
+++ b/views/bufferPage.jade
@@ -10,4 +10,7 @@ block content
       .form-group
         label(for="compound") compound formula
         input(id="compound", type="text", name="compound").form-control
+      .form-group
+        label(for="concentration") concentration
+        input(id="concentration", type="text", name="concentration").form-control
       button(type="submit").btn.btn-success.form-control Submit
