--- a/views/index.jade
+++ b/views/index.jade
@@ -11,4 +11,5 @@ block content
     h3 Here are the buffers that have already been made:
     ul
       each buffer in buffers
-        li= buffer.nameify
+        li
+            a(href="/buffers/#{buffer._id}")= buffer.nameify || "no name found"
