--- a/views/userPage.jade
+++ b/views/userPage.jade
@@ -4,11 +4,11 @@ block content
   .container
     h1= user.name.first
     p Email: #{user.email}
-    h4 Sean's buffers
+    h4 #{user.name.first}'s buffers
     ul
-      each buffer in user.buffers
+      each buffer in buffers
         a(href="/buffers/#{buffer._id}")
-          li #{buffer.nameify}, #{buffer.volume}
+          li #{buffer.string}, #{buffer.volume.value} #{buffer.volume.units}
     h4 Make a new buffer as #{user.name.first}:
     form(action="/buffers", method="post")
       .form-group
