--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,12 +1,16 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
+  padding: 50px; }
 
-a {
-  color: #00B7FF;
-}
-
-.cop {
-  color: blue;
-}
+.login {
+  margin: auto;
+  padding: 20px;
+  background: none;
+  text-align: center;
+  color: #2f4154; }
+  .login input {
+    margin: auto; }
+  .login button {
+    border: none;
+    color: #fff; }
+  .login h3 {
+    color: #2f4154; }
