adding routes and others

--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -7,7 +7,7 @@
           <label for="username">username</label>
           <input id="username" type="text" name="username" class="form-control"/>
         </div>
-        <button type="submit" class="btn btn-success form-control">Submit</button>
+        <button class="btn btn-success form-control">Login</button>
       </form>
     </div>
   </div>
