--- a/public/templates/signup.html
+++ b/public/templates/signup.html
@@ -17,7 +17,7 @@
           <label for="email">email</label>
           <input ng-model="user.email" type="text" name="email" class="form-control"/>
         </div>
-        <input type="submit" class="btn btn-success form-control"></input> 
+        <button class="btn btn-success form-control">Sign up</button> 
       </form>
       {{user | json}}
     </div>
