--- a/public/templates/bufferPage.html
+++ b/public/templates/bufferPage.html
@@ -1,15 +1,19 @@
-<h4>Bufferpage</h4>
+<h4><buffer-name buffer="buffer"></buffer-name></h4>
 <ul>
-  <li> grams of </li>
+  <li 
+  ng-repeat="compound in buffer.compounds"> 
+    {{compound.amount}} grams of {{compound.value.formula}}
+  </li>
 </ul>
-<form>
+<form class="form-inline" ng-repeat="compound in buffer.compounds">
   <div class="form-group">
     <label for="compound">compound formula</label>
-    <input id="compound" type="text" name="compound" class="form-control"/>
+    <input ng-model="compound.value.formula" type="text" name="compound" class="form-control"/>
   </div>
   <div class="form-group">
-    <label for="concentration">concentration</label>
-    <input id="concentration" type="text" name="concentration" class="form-control"/>
+    <label for="concentration">concentration number</label>
+    <input ng-model="compound.concentration.value" type="text" name="concentration" class="form-control"/>
+    <label for="concentration">units</label>
+    <input ng-model="compound.concentration.units" type="text" name="concentration" class="form-control"/>
   </div>
-  <button type="submit" class="btn btn-success form-control">Submit</button>
 </form>
